--- a/admin/index.html
+++ b/admin/index.html
@@ -415,39 +415,41 @@
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <form id="galleryForm" class="modal-form">
-                <input type="hidden" id="galleryId">
-                
-                <div class="form-group">
-                    <label for="galleryTitle">Title *</label>
-                    <input type="text" id="galleryTitle" required placeholder="e.g., Student Performances">
-                </div>
-
-                <div class="form-group">
-                    <label for="galleryDescription">Description *</label>
-                    <input type="text" id="galleryDescription" required placeholder="e.g., Annual Cultural Program 2024">
-                </div>
-
-                <div class="form-group">
-                    <label for="galleryImage">Photo *</label>
-                    <div class="file-upload-area">
-                        <input type="file" id="galleryImage" accept="image/*">
-                        <div class="file-upload-text">
-                            <i class="fas fa-cloud-upload-alt"></i>
-                            <p>Click to upload or drag and drop</p>
-                            <small>PNG, JPG, JPEG (Max 5MB)</small>
-                        </div>
+            <div class="modal-body">
+                <form id="galleryForm" class="modal-form">
+                    <input type="hidden" id="galleryId">
+                    
+                    <div class="form-group">
+                        <label for="galleryTitle">Title *</label>
+                        <input type="text" id="galleryTitle" required placeholder="e.g., Student Performances">
                     </div>
-                    <div id="galleryImagePreview" class="image-preview"></div>
-                </div>
 
-                <div class="modal-actions">
-                    <button type="button" class="btn-cancel" data-modal="galleryModal">Cancel</button>
-                    <button type="submit" class="btn-save">
-                        <i class="fas fa-save"></i> Save Photo
-                    </button>
-                </div>
-            </form>
+                    <div class="form-group">
+                        <label for="galleryDescription">Description *</label>
+                        <input type="text" id="galleryDescription" required placeholder="e.g., Annual Cultural Program 2024">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="galleryImage">Photo *</label>
+                        <div class="file-upload-area">
+                            <input type="file" id="galleryImage" accept="image/*">
+                            <div class="file-upload-text">
+                                <i class="fas fa-cloud-upload-alt"></i>
+                                <p>Click to upload or drag and drop</p>
+                                <small>PNG, JPG, JPEG (Max 5MB)</small>
+                            </div>
+                        </div>
+                        <div id="galleryImagePreview" class="image-preview"></div>
+                    </div>
+
+                    <div class="modal-actions">
+                        <button type="button" class="btn-cancel" data-modal="galleryModal">Cancel</button>
+                        <button type="submit" class="btn-save">
+                            <i class="fas fa-save"></i> Save Photo
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
