--- a/website/index.html
+++ b/website/index.html
@@ -500,23 +500,23 @@
             <div class="cultural-elements fade-in">
                 <div class="element-card">
                     <div class="element-icon">🎭</div>
-                    <h4>Bengali Theatre</h4>
-                    <p>Rich tradition of drama and performance arts</p>
+                    <h4>Acting & Performance</h4>
+                    <p>Master the art of dramatic expression and stage presence</p>
                 </div>
                 <div class="element-card">
                     <div class="element-icon">📖</div>
-                    <h4>Literary Heritage</h4>
-                    <p>Centuries of poetry, prose, and storytelling</p>
+                    <h4>Bengali Poem Recitation</h4>
+                    <p>Explore the beauty of Bengali poetry through voice and emotion</p>
                 </div>
                 <div class="element-card">
                     <div class="element-icon">🎵</div>
-                    <h4>Rabindra Sangeet</h4>
-                    <p>Musical legacy of Tagore's compositions</p>
+                    <h4>English Poem Recitation</h4>
+                    <p>Perfect your diction and expression in English verse</p>
                 </div>
                 <div class="element-card">
                     <div class="element-icon">🎨</div>
-                    <h4>Bengali Art</h4>
-                    <p>Visual arts inspired by cultural motifs</p>
+                    <h4>Srutinatok</h4>
+                    <p>Learn the unique craft of Bengali audio drama performance</p>
                 </div>
             </div>
         </div>
