Implement automated cache busting for mobile - v202511102038

--- a/admin.html
+++ b/admin.html
@@ -8,8 +8,8 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Admin Panel - Anuranan</title>
-    <link rel="stylesheet" href="styles.css?v=1.0">
-    <link rel="stylesheet" href="admin.css?v=1.0">
+    <link rel="stylesheet" href="styles.css?v=202511102038">
+    <link rel="stylesheet" href="admin.css?v=202511102038">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -279,6 +279,6 @@
         <span id="toastMessage">Action completed successfully!</span>
     </div>
 
-    <script src="admin.js?v=1.0"></script>
+    <script src="admin.js?v=202511102038"></script>
 </body>
 </html>
