--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Anuranan Recitation Training Institute | Bengali Cultural Learning Hub</title>
-    <link rel="stylesheet" href="styles.css?v=1.0">
+    <link rel="stylesheet" href="styles.css?v=202511102038">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Hind+Siliguri:wght@300;400;500;600;700&family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -20,6 +20,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
+    <!-- Mobile Navigation Overlay -->
+    <div class="nav-overlay" id="navOverlay"></div>
+
     <!-- Navigation Bar -->
     <nav class="navbar" id="navbar">
         <div class="container">
@@ -31,6 +34,10 @@
                     </div>
                 </div>
                 <div class="nav-links" id="navLinks">
+                    <div class="mobile-menu-header">
+                        <h1>অনুরণন</h1>
+                    </div>
+                    <div class="nav-swipe-indicator"></div>
                     <a href="#home" class="nav-link active">Home</a>
                     <a href="#about" class="nav-link">About Us</a>
                     <a href="#courses" class="nav-link">Courses</a>
@@ -852,7 +859,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=1.0"></script>
-    <script src="supabase-loader.js?v=1.0"></script>
+    <script src="script.js?v=202511102038"></script>
+    <script src="supabase-loader.js?v=202511102038"></script>
 </body>
 </html>
