--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Anuranan Recitation Training Institute | Bengali Cultural Learning Hub</title>
-    <link rel="stylesheet" href="styles.css?v=1.0">
+    <link rel="stylesheet" href="styles.css?v=202511102038">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Hind+Siliguri:wght@300;400;500;600;700&family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -838,7 +838,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script src="script.js?v=1.0"></script>
-    <script src="supabase-loader.js?v=1.0"></script>
+    <script src="script.js?v=202511102038"></script>
+    <script src="supabase-loader.js?v=202511102038"></script>
 </body>
 </html>
