--- a/admin/index.html
+++ b/admin/index.html
@@ -7,6 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1B4B8F">
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="public/admin-icon-192.png">
     <!-- Cache Control Meta Tags -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
@@ -752,5 +755,20 @@
     </div>
 
     <script src="admin.js?v=202511102038"></script>
+    
+    <!-- Service Worker Registration -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/admin/service-worker.js')
+                    .then((registration) => {
+                        console.log('Admin Service Worker registered successfully:', registration.scope);
+                    })
+                    .catch((error) => {
+                        console.log('Admin Service Worker registration failed:', error);
+                    });
+            });
+        }
+    </script>
 </body>
 </html>
