--- a/admin/courses.html
+++ b/admin/courses.html
@@ -9,13 +9,15 @@
     <meta name="theme-color" content="#1B4B8F">
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="public/admin-icon-192.png">
+    <link rel="apple-touch-icon" href="public/admin-logo-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="public/admin-logo-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="public/admin-logo-512x512.png">
     <!-- Cache Control Meta Tags -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Course Management - Admin Panel</title>
-    <link rel="stylesheet" href="admin.css?v=202511102220">
+    <link rel="stylesheet" href="admin.css?v=202511102300">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -507,9 +509,9 @@
     <nav class="admin-navbar">
         <div class="admin-nav-content">
             <div class="admin-logo">
-                <div class="logo-icon">অ</div>
+                <img src="public/admin-logo-192x192.png" alt="Admin Logo" class="logo-icon-img">
                 <div class="logo-text">
-                    <h1>অনুরণন</h1>
+                    <h1>Anuranan Admin Panel</h1>
                     <p>Course Management</p>
                 </div>
             </div>
