Fix admin PWA: Update manifest, service worker, and add new admin panel icons

--- a/admin/index.html
+++ b/admin/index.html
@@ -7,13 +7,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1B4B8F">
+    <meta name="apple-mobile-web-app-title" content="Admin Panel">
     <!-- PWA Manifest -->
-    <link rel="manifest" href="/admin/manifest.json" crossorigin="use-credentials">
-    <link rel="apple-touch-icon" href="/admin/public/admin-logo-192x192.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="/admin/public/admin-logo-192x192.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="/admin/public/admin-logo-512x512.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/admin/public/admin-logo-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/admin/public/admin-logo-512x512.png">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="apple-touch-icon" href="./public/admin-logo-192x192.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="./public/admin-logo-192x192.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="./public/admin-logo-512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./public/admin-logo-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./public/admin-logo-512x512.png">
+    <link rel="shortcut icon" href="./public/admin-logo-192x192.png">
     <!-- Cache Control Meta Tags -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
