--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Anuranan Recitation Training Institute | Bengali Cultural Learning Hub</title>
-    <link rel="stylesheet" href="styles.css?v=202511102055">
+    <link rel="stylesheet" href="styles.css?v=202511110001">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Hind+Siliguri:wght@300;400;500;600;700&family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -46,9 +46,10 @@
                     <a href="#courses" class="nav-link">Courses</a>
                     <a href="#class-details" class="nav-link">Class Details</a>
                     <a href="#gallery" class="nav-link">Gallery</a>
+                    <a href="videos.html" class="nav-link">Videos</a>
                     <a href="#events" class="nav-link">Events</a>
                     <a href="#contact" class="nav-link">Contact</a>
-                    <a href="#contact" class="btn-join">Join Now</a>
+                    <a href="#" class="btn-join">Join Now</a>
                 </div>
                 <div class="hamburger" id="hamburger">
                     <span></span>
@@ -122,7 +123,7 @@
                 </p>
                 <div class="hero-buttons">
                     <a href="#courses" class="btn btn-primary">Explore Courses</a>
-                    <a href="#contact" class="btn btn-secondary">Join Now</a>
+                    <a href="#" class="btn btn-secondary">Join Now</a>
                 </div>
                 <div class="hero-features">
                     <div class="feature-item">
